force-app/main/default/objects/Customer_Segment__c/Customer_Segment__c.object-meta.xml
<CustomObject>
    <label>Customer Segment</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>