force-app/main/default/objects/Customer_Segment__c/fields/Average_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Conversion_Rate__c</fullName>
    <label>Average Conversion Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>