force-app/main/default/objects/Customer_Segment__c/fields/Average_Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Customer_Value__c</fullName>
    <label>Average Customer Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>