force-app/main/default/objects/Customer_Segment__c/fields/Average_Journey_Length__c.field-meta.xml
<CustomField>
    <fullName>Average_Journey_Length__c</fullName>
    <label>Average Journey Length</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>