force-app/main/default/objects/Customer_Segment__c/fields/Customer_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Count__c</fullName>
    <label>Customer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>