force-app/main/default/objects/Customer_Segment__c/fields/Segment_Description__c.field-meta.xml
<CustomField>
    <fullName>Segment_Description__c</fullName>
    <label>Segment Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>