force-app/main/default/objects/Customer_Segment__c/fields/Segment_ID__c.field-meta.xml
<CustomField>
    <fullName>Segment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Segment ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>