force-app/main/default/objects/Customer_Segment__c/fields/Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Type__c</fullName>
    <label>Segment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFM</fullName>
            </value>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Journey_Pattern</fullName>
                <label>Journey Pattern</label>
            </value>
            <value>
                <fullName>CLV_Based</fullName>
                <label>CLV Based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>